feat(multiblock): implement asynchronous multiblock checking with configurable parameters